logs/binmapper.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/binmapper'...
Listing './lib/python3.5/site-packages/binmapper/codec'...
Listing './lib/python3.5/site-packages/binmapper/parser'...
Compiling './lib/python3.5/site-packages/binmapper/parser/helper.py'...
***   File "./lib/python3.5/site-packages/binmapper/parser/helper.py", line 29
    exec bytecode in binmapper_.__dict__
                ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/binmapper/parser/templates'...
Listing './lib/python3.5/site-packages/binmapper/tests'...
Listing './lib/python3.5/site-packages/binmapper/tests/temp'...
Compiling './lib/python3.5/site-packages/binmapper/tests/temp/definition.py'...
*** Sorry: ValueError: source code string cannot contain null bytes
Compiling './lib/python3.5/site-packages/binmapper/tests/test_05_basic.py'...
***   File "./lib/python3.5/site-packages/binmapper/tests/test_05_basic.py", line 38
    print len(input.getvalue())
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/binmapper/tests/test_10_codec.py'...
***   File "./lib/python3.5/site-packages/binmapper/tests/test_10_codec.py", line 38
    print dir(binmapper.tests.temp.definition)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/binmapper/types.py'...
***   File "./lib/python3.5/site-packages/binmapper/types.py", line 360
    print "Warning! Trying append incorrect type '%s' to binarray with type '%s'" % (fq_value_type, fq_array_elem_type)
                                                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/binmapper-0.1a5.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
